--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-template",
-  "version": "1.2",
+  "version": "1.3",
   "description": "An Express Template with PostgreSQL support",
   "repository": "https://github.com/erremauro/express-template.git",
   "private": true,
@@ -8,26 +8,24 @@
     "start": "node ./scripts/start"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "body-parser": "~1.18.2",
-    "commander": "^2.12.2",
-    "compression": "^1.7.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "knex": "^0.14.6",
-    "morgan": "~1.9.0",
-    "pg": "^7.4.0",
-    "pug": "2.0.0-beta11",
-    "rear-logger": "^0.2.0",
-    "serve-favicon": "~2.4.5"
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "commander": "^5.0.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.0",
+    "knex": "^0.21.0",
+    "morgan": "^1.10.0",
+    "pug": "^2.0.4",
+    "rear-logger": "^1.0.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0",
-    "fs-extra": "^4.0.3",
-    "glob": "^7.1.2",
-    "nodemon": "^1.12.5",
-    "sqlite3": "^4.0.1"
+    "nodemon": "^2.0.3",
+    "sqlite3": "^4.1.1"
   }
 }
